--- a/auth/src/main/resources/application.yml
+++ b/auth/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: business-oauth2
+    name: user-auth
   main:
     allow-bean-definition-overriding: true
   jackson:
