--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -32,3 +32,9 @@ spring:
             - Path=/api/user/**,/api/role/**,/api/permiss/**,/api/professional/**
           filters:
             - StripPrefix=1
+        - id: route_user
+          uri: lb://user-auth
+          predicates:
+            - Path=/api/auth/**
+          filters:
+            - StripPrefix=1
